
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excelstyler"
version = "0.1.3"
description = "Style and format Excel files easily with openpyxl"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Nima Orangi", email = "7nimor@gmail.com"}]
keywords = ["excel", "openpyxl", "styling", "xlsx", "spreadsheet", "persian", "farsi", "shamsi", "jdatetime", "report", "iranian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "openpyxl>=3.0.10",
    "jdatetime>=4.1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/7nimor/excelstyler"
